<resources>
    <string name="app_name">Popular Movies</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">Details</string>

    <!--actions from the actionbar-->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_order_by_release">Order by Date</string>
    <string name="action_order_by_rating">Order by Rating</string>
    <string name="action_order_by_popularity">Order by Popularity</string>



    <!-- detail screen-->
    <string name="detail_title">Title</string>
    <string name="detail_release">Release Date</string>
    <string name="detail_language">Org. Language</string>
    <string name="detail_rating">Avg. Rating</string>
    <string name="detail_overview">Overview</string>
    <string name="detail_trailer">Trailers</string>
    <string name="detail_review">Reviews</string>
    <string name="action_favorites">Favorites</string>
    <string name="add_to_favs">Add to Favorites</string>
    <string name="remove_from_favs">Remove from Favorites</string>

</resources>
