<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item android:id="@+id/action_sort_by_release"
        android:title="@string/action_order_by_release"
        app:showAsAction="never" />
    <item android:id="@+id/action_sort_by_rating"
        android:title="@string/action_order_by_rating"
        app:showAsAction="never" />
    <item android:id="@+id/action_sort_by_popularity"
        android:title="@string/action_order_by_popularity"
        app:showAsAction="never" />
    <item android:id="@+id/action_get_favorites"
        android:title="@string/action_favorites"
        app:showAsAction="never" />


</menu>